--- a/Express/views/index.hbs
+++ b/Express/views/index.hbs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>My friends are clever</title>
+    <link rel="stylesheet" href="site/css/style.css">
+    <title>{{title}}</title>
 </head>
 <body>
     <div>
-        <h1>Pakistan is beautiful</h1>
-        <img width="400px" height="400px" src="./images/nature.jpg
+        <h1>{{caption}}</h1>
+        <img width="400px" height="400px" src="site/images/nature.jpg
         " alt="my-image.jpg">
     </div>
 </body>
